fixing OverFlow

--- a/src/output.css
+++ b/src/output.css
@@ -588,9 +588,6 @@
   .-z-10 {
     z-index: calc(10 * -1);
   }
-  .z-10 {
-    z-index: 10;
-  }
   .z-40 {
     z-index: 40;
   }
@@ -669,26 +666,11 @@
   .mt-20 {
     margin-top: calc(var(--spacing) * 20);
   }
-  .mb-1 {
-    margin-bottom: calc(var(--spacing) * 1);
-  }
-  .mb-2 {
-    margin-bottom: calc(var(--spacing) * 2);
-  }
-  .mb-3 {
-    margin-bottom: calc(var(--spacing) * 3);
-  }
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
   }
   .mb-16 {
     margin-bottom: calc(var(--spacing) * 16);
-  }
-  .mb-20 {
-    margin-bottom: calc(var(--spacing) * 20);
-  }
-  .mb-32 {
-    margin-bottom: calc(var(--spacing) * 32);
   }
   .block {
     display: block;
@@ -734,46 +716,6 @@
     width: calc(var(--spacing) * 36);
     height: calc(var(--spacing) * 36);
   }
-  .size-\[1px\] {
-    width: 1px;
-    height: 1px;
-  }
-  .size-\[8\] {
-    width: 8;
-    height: 8;
-  }
-  .size-\[8px\] {
-    width: 8px;
-    height: 8px;
-  }
-  .size-\[9px\] {
-    width: 9px;
-    height: 9px;
-  }
-  .size-\[10px\] {
-    width: 10px;
-    height: 10px;
-  }
-  .size-\[80\] {
-    width: 80;
-    height: 80;
-  }
-  .size-\[80px\] {
-    width: 80px;
-    height: 80px;
-  }
-  .size-\[85px\] {
-    width: 85px;
-    height: 85px;
-  }
-  .size-\[90px\] {
-    width: 90px;
-    height: 90px;
-  }
-  .size-\[95px\] {
-    width: 95px;
-    height: 95px;
-  }
   .size-\[100px\] {
     width: 100px;
     height: 100px;
@@ -782,27 +724,11 @@
     width: 400px;
     height: 400px;
   }
-  .size-\[px\] {
-    width: px;
-    height: px;
-  }
   .h-0 {
     height: calc(var(--spacing) * 0);
   }
-  .h-6 {
-    height: calc(var(--spacing) * 6);
-  }
-  .h-7 {
-    height: calc(var(--spacing) * 7);
-  }
   .h-20 {
     height: calc(var(--spacing) * 20);
-  }
-  .h-64 {
-    height: calc(var(--spacing) * 64);
-  }
-  .h-72 {
-    height: calc(var(--spacing) * 72);
   }
   .h-\[1px\] {
     height: 1px;
@@ -822,26 +748,8 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
-  .w-5 {
-    width: calc(var(--spacing) * 5);
-  }
-  .w-6 {
-    width: calc(var(--spacing) * 6);
-  }
-  .w-36 {
-    width: calc(var(--spacing) * 36);
-  }
-  .w-56 {
-    width: calc(var(--spacing) * 56);
-  }
   .w-64 {
     width: calc(var(--spacing) * 64);
-  }
-  .w-66 {
-    width: calc(var(--spacing) * 66);
   }
   .w-\[80px\] {
     width: 80px;
@@ -869,12 +777,6 @@
   }
   .resize {
     resize: both;
-  }
-  .grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-  .grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -944,9 +846,6 @@
   .overflow-y-auto {
     overflow-y: auto;
   }
-  .rounded {
-    border-radius: 0.25rem;
-  }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
@@ -1000,9 +899,6 @@
   .bg-cover {
     background-size: cover;
   }
-  .fill-amber-600 {
-    fill: var(--color-amber-600);
-  }
   .object-contain {
     object-fit: contain;
   }
@@ -1017,9 +913,6 @@
   }
   .p-5 {
     padding: calc(var(--spacing) * 5);
-  }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
@@ -1053,9 +946,6 @@
   }
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
-  }
-  .py-32 {
-    padding-block: calc(var(--spacing) * 32);
   }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
@@ -1103,14 +993,6 @@
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
-  .text-6xl {
-    font-size: var(--text-6xl);
-    line-height: var(--tw-leading, var(--text-6xl--line-height));
-  }
-  .text-7xl {
-    font-size: var(--text-7xl);
-    line-height: var(--tw-leading, var(--text-7xl--line-height));
-  }
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
@@ -1118,12 +1000,6 @@
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
-  }
-  .text-\[2px\] {
-    font-size: 2px;
-  }
-  .text-\[3px\] {
-    font-size: 3px;
   }
   .text-\[16px\] {
     font-size: 16px;
@@ -1134,39 +1010,12 @@
   .text-\[24px\] {
     font-size: 24px;
   }
-  .text-\[30px\] {
-    font-size: 30px;
-  }
   .text-\[60px\] {
     font-size: 60px;
   }
   .leading-14 {
     --tw-leading: calc(var(--spacing) * 14);
     line-height: calc(var(--spacing) * 14);
-  }
-  .font-\[2\] {
-    --tw-font-weight: 2;
-    font-weight: 2;
-  }
-  .font-\[2px\] {
-    --tw-font-weight: 2px;
-    font-weight: 2px;
-  }
-  .font-\[3px\] {
-    --tw-font-weight: 3px;
-    font-weight: 3px;
-  }
-  .font-\[24\] {
-    --tw-font-weight: 24;
-    font-weight: 24;
-  }
-  .font-\[24px\] {
-    --tw-font-weight: 24px;
-    font-weight: 24px;
-  }
-  .font-\[30px\] {
-    --tw-font-weight: 30px;
-    font-weight: 30px;
   }
   .font-\[600\] {
     --tw-font-weight: 600;
@@ -1176,10 +1025,6 @@
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
-  .-tracking-wide {
-    --tw-tracking: calc(var(--tracking-wide) * -1);
-    letter-spacing: calc(var(--tracking-wide) * -1);
-  }
   .tracking-\[-3px\] {
     --tw-tracking: -3px;
     letter-spacing: -3px;
@@ -1188,37 +1033,9 @@
     --tw-tracking: 3px;
     letter-spacing: 3px;
   }
-  .tracking-wide {
-    --tw-tracking: var(--tracking-wide);
-    letter-spacing: var(--tracking-wide);
-  }
   .tracking-wider {
     --tw-tracking: var(--tracking-wider);
     letter-spacing: var(--tracking-wider);
-  }
-  .text-\[\#0C0C1C\] {
-    color: #0C0C1C;
-  }
-  .text-\[\#0C0C1\] {
-    color: #0C0C1;
-  }
-  .text-\[\#0C0C\] {
-    color: #0C0C;
-  }
-  .text-\[\#0C0\] {
-    color: #0C0;
-  }
-  .text-\[\#0C\] {
-    color: #0C;
-  }
-  .text-\[\#0\] {
-    color: #0;
-  }
-  .text-\[\#6\] {
-    color: #6;
-  }
-  .text-\[\#66\] {
-    color: #66;
   }
   .text-\[\#666\] {
     color: #666;
@@ -1235,32 +1052,11 @@
   .text-\[\#FFB200\] {
     color: #FFB200;
   }
-  .text-\[\#\] {
-    color: #;
-  }
   .text-\[\#b9b9b9\] {
     color: #b9b9b9;
   }
-  .text-\[6\] {
-    color: 6;
-  }
-  .text-\[60\] {
-    color: 60;
-  }
-  .text-\[60p\] {
-    color: 60p;
-  }
-  .text-\[BF1109\] {
-    color: BF1109;
-  }
-  .text-\[px\] {
-    color: px;
-  }
   .text-black {
     color: var(--color-black);
-  }
-  .text-current {
-    color: currentColor;
   }
   .text-white {
     color: var(--color-white);
@@ -1337,38 +1133,10 @@
       }
     }
   }
-  .group-hover\:text-\[\#666\] {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        color: #666;
-      }
-    }
-  }
-  .group-hover\:text-\[\#919191\] {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        color: #919191;
-      }
-    }
-  }
-  .group-hover\:text-\[\#afafaf\] {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        color: #afafaf;
-      }
-    }
-  }
   .group-hover\:text-\[\#c4c4c4\] {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
         color: #c4c4c4;
-      }
-    }
-  }
-  .group-hover\:text-\[666\] {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        color: 666;
       }
     }
   }
@@ -1393,31 +1161,10 @@
       }
     }
   }
-  .hover\:bg-\[\@BF1109\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: @BF1109;
-      }
-    }
-  }
-  .hover\:bg-\[BF1109\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: BF1109;
-      }
-    }
-  }
   .hover\:bg-green {
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-green);
-      }
-    }
-  }
-  .hover\:fill-white {
-    &:hover {
-      @media (hover: hover) {
-        fill: var(--color-white);
       }
     }
   }
